@@ -98,8 +98,10 @@ GENERATECHANGELOG.text=\u0041\u006b\u0074\u0075\u0065\u006c\u006c\u0065\u0020\u0
 TABLEMUSTHAVEATLEASTONEATTRIBUTE.text=\u0045\u0069\u006e\u0065\u0020\u0054\u0061\u0062\u0065\u006c\u006c\u0065\u0020\u006d\u0075\u0073\u0073\u0020\u006d\u0069\u006e\u0064\u0065\u0073\u0074\u0065\u006e\u0073\u0020\u0065\u0069\u006e\u0020\u0041\u0074\u0074\u0072\u0069\u0062\u0075\u0074\u0020\u0062\u0065\u0069\u006e\u0068\u0061\u006c\u0074\u0065\u006e
 DIALECTISNOTSUPPORTED.text=\u0044\u0065\u0072\u0020\u0044\u0061\u0074\u0065\u006e\u0062\u0061\u006e\u006b\u0064\u0069\u0061\u006c\u0065\u006b\u0074\u0020\u0077\u0069\u0072\u0064\u0020\u006e\u0069\u0063\u0068\u0074\u0020\u0075\u006e\u0074\u0065\u0072\u0073\u0074\u00fc\u0074\u007a\u0074\u0021
 EXTRA.text=\u0045\u0078\u0074\u0072\u0061
-COMPLETECOMPARE.text=\u0056\u0065\u0072\u0067\u006c\u0065\u0069\u0063\u0068\u0065\u006e\u0020\u006d\u0069\u0074\u0020\u0044\u0061\u0074\u0065\u006e\u0062\u0061\u006e\u006b\u002e\u002e\u002e
-MODEL.text=\u004d\u006f\u0064\u0065\u006c\u006c
+COMPLETECOMPAREWITHDATABASE.text=\u0056\u0065\u0072\u0067\u006c\u0065\u0069\u0063\u0068\u0065\u006e\u0020\u006d\u0069\u0074\u0020\u0044\u0061\u0074\u0065\u006e\u0062\u0061\u006e\u006b\u002e\u002e\u002e
+COMPLETECOMPAREWITHOTHERMODEL.text=\u0056\u0065\u0072\u0067\u006c\u0065\u0069\u0063\u0068\u0065\u006e\u0020\u006d\u0069\u0074\u0020\u0061\u006e\u0064\u0065\u0072\u0065\u006d\u0020\u004d\u006f\u0064\u0065\u006c\u006c\u002e\u002e\u002e
+CURRENTMODEL.text=\u0041\u006b\u0074\u0075\u0065\u006c\u006c\u0065\u0073\u0020\u004d\u006f\u0064\u0065\u006c\u006c
+OTHERMODEL.text=\u0041\u006e\u0064\u0065\u0072\u0065\u0073\u0020\u004d\u006f\u0064\u0065\u006c\u006c
 MISSINGENTITY.text=\u0054\u0061\u0062\u0065\u006c\u006c\u0065\u0020\u007b\u0030\u007d\u0020\u0066\u0065\u0068\u006c\u0074
 MISSINGATTRIBUTE.text=\u0041\u0074\u0074\u0072\u0069\u0062\u0075\u0074\u0020\u007b\u0030\u007d\u0020\u0066\u0065\u0068\u006c\u0074
 REDEFINED.text=\u0055\u006d\u0064\u0065\u0066\u0069\u006e\u0069\u0065\u0072\u0074\u0020\u007b\u0030\u007d
